@@ -1,0 +1,26 @@
+<printer id="printer/HP-CP3525n">
+  <make>HP</make>
+  <model>CP3525n</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://h10010.www1.hp.com/wwpc/be/fr/sm/WF25a/18972-18972-3328060-236268-236268-3690646.html</url>
+  <lang>
+    <postscript level="3" />
+    <pdf level="1.4" />
+    <pcl level="6" />
+  </lang>
+  <autodetect>
+    <snmp>
+      <description>HP Color LaserJet CP3525</description>
+    </snmp>
+  </autodetect>
+  <functionality>A</functionality>
+</printer>
