@@ -1,3 +1,8 @@
+2010-10-09  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/HP-CP3525n.xml:
+	  New entries added to the MySQL database.
+
 2010-10-08  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/opt/126.xml: Fixed default PageSize choice for the
